--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     margin: 0 auto;
     width: 90%;
     margin-top: 40px;
@@ -21,4 +21,4 @@
     font-size: 3.2rem;
     z-index: -1;
     color: #eae8e8;
-}
+} */
