--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,7 +1,17 @@
+*{
+    list-style: none;
+    text-decoration: none;
+}
+.App{
+    margin-top: 40px;
+}
 .container{
     margin: 0 auto;
     width: 93%;
-    margin-top: 40px;
+}
+nav{
+    display: flex;
+    flex-direction: row;
 }
 .container nav{
     position: relative;
@@ -16,15 +26,15 @@
 }
 .solidBrand{
     position: absolute;
-    top: -77%;
-    left: -7.45%;
-    font-size: 3.6rem;
+    top: -25%;
+    left: -6.45%;
+    font-size: 3.8rem;
     z-index: -1;
     color: #eae8e8;
 }
 .box{
     background: #dddccc;
-    width: 400px;
+    width: 420px;
     height: 660px;
     position: absolute;
     top: 0%;
@@ -33,4 +43,27 @@
 }
 .outer{
     overflow: hidden;
+}
+.main-nav{
+    padding: 5px;
+    width: 100%;
+}
+.main-nav .lang{
+    margin-left: 20%;
+}
+.main-nav ul li {
+    float: left;
+}
+.main-nav ul li a{
+    color: #9e9e9e;
+}
+.main-nav .cart-prop{
+    float: right;
+}
+.main-nav .cart-prop li{
+    margin-right: 35px;
+}
+.main-nav .cart-prop li:nth-last-child(1){
+    margin-top: -8px;
+    cursor: pointer;
 }
