--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,7 +3,7 @@
     text-decoration: none;
 }
 .App{
-    margin-top: 40px;
+    margin-top: 20px;
 }
 .container{
     margin: 0 auto;
@@ -83,7 +83,7 @@ nav{
     cursor: pointer;
 }
 .c-active{
-    background: #f5fe04;
+    background: rgb(250, 197, 21);
     color: rgb(51, 43, 26);
 }
 .categories ul li:nth-child(3),.categories ul li:nth-child(4){
