--- a/src/components/products/CurrentProduct.css
+++ b/src/components/products/CurrentProduct.css
@@ -26,6 +26,7 @@
 .p-weight .p-price{
     font-size: 0.8rem;
     font-weight: 600;
+    margin-top: 4px;
 }
 .p-image{
     margin-top: 12%;
@@ -80,7 +81,7 @@
 .product{
     border-radius: 25px;
     width: min-content;
-    box-shadow: 5px 5px 10px 0 #9E9E9E;
+    box-shadow: 5px 7px 10px 0 #9E9E9E;
     background: #fff;
     padding: 8%;
     margin-bottom: 8%;
@@ -90,10 +91,10 @@
     width: 73%;
     height: 150%;
     position: absolute;
-    top: 0;
+    top: -4%;
     left: 20%;
     display: grid;
+    padding: 1% 3% 0 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     overflow: auto;
-    padding-right: 3%;
 }
