--- a/src/components/products/CurrentProduct.css
+++ b/src/components/products/CurrentProduct.css
@@ -91,10 +91,36 @@
     width: 73%;
     height: 117%;
     position: absolute;
-    top: -4%;
+    top: -6%;
     left: 20%;
     display: grid;
     padding: 1% 3% 0 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     overflow: auto;
 }
+
+.mapproduct::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  .mapproduct::-webkit-scrollbar-track {
+    background: rgba(53, 48, 47, 0.198);
+      border-left: 9px solid white;
+      
+      border-right: 9px solid white;
+    border-radius: 15px;
+  }
+   
+  /* Handle */
+  .mapproduct::-webkit-scrollbar-thumb {
+    background: #6a6b6a;
+      border-left: 7px solid white;
+      border-right: 7px solid white;
+    border-radius: 500px;
+  }
+  
+  /* Handle on hover */
+  .mapproduct::-webkit-scrollbar-thumb:hover {
+    
+  }
