--- a/src/components/products/CurrentProduct.css
+++ b/src/components/products/CurrentProduct.css
@@ -7,6 +7,7 @@
     color: #403918;
     border-radius: 25px;
     background: linear-gradient(-240deg,#FFEB3B,rgb(250, 158, 21));
+    box-shadow: 0px 24px 48px -12px rgba(250,158, 21,0.55) ;
 }
 
 .p-name h5{
