--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -63,7 +63,7 @@ nav{
 .main-nav .cart-prop li{
     margin-right: 35px;
 }
-.main-nav .cart-prop li:nth-last-child(1){
+.main-nav .cart-prop li:nth-child(4){
     margin-top: -8px;
     cursor: pointer;
 }
