--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -74,6 +74,7 @@ nav{
     border:1px solid #ccc;
     padding: 10% 0;
     font-size: 0.8em;
+    cursor: pointer;
 }
 .f-prod p {
     margin-top: 2%;
