--- a/src/components/responsive/index.css
+++ b/src/components/responsive/index.css
@@ -7,7 +7,7 @@
     .brand h4 img{
         height: 45px;
     }
-    .m-hide,.solidBrand,.delivery,.search-box,.allproducts,.categories ul{
+    .m-hide,.solidBrand,.delivery,.search-box,.categories ul{
         display: none;
     }
     .main-nav .cart-prop{
@@ -37,5 +37,21 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 15px;
     }
-    
+    .currentproduct{
+        display: none;
+    }
+    .mapproduct{
+        position: relative;
+        margin-top: 10%;
+        left: 2%;
+        grid-template-columns: 1fr 1fr;
+        overflow: visible;
+        grid-gap: 20px;
+    }
+    .product{
+        width: auto;
+    }
+    .product .p-image{
+        width: 100px;
+    }
   }
