--- a/src/components/products/CurrentProduct.css
+++ b/src/components/products/CurrentProduct.css
@@ -87,7 +87,10 @@
     padding: 8%;
     margin-bottom: 8%;
 }
-
+.product:hover {
+    transform: scale(1.1);
+    transition: all 500ms;
+}
 .mapproduct{
     width: 73%;
     height: 117%;
@@ -122,6 +125,6 @@
   }
   
   /* Handle on hover */
-  .mapproduct::-webkit-scrollbar-thumb:hover {
+  /* .mapproduct::-webkit-scrollbar-thumb:hover {
     
-  }
+  } */
