--- a/src/components/responsive/index.css
+++ b/src/components/responsive/index.css
@@ -37,21 +37,46 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 15px;
     }
+    .m-show{
+        display: block;
+        margin-top: 6%;
+        transition: all 600ms;
+    }
     .currentproduct{
         display: none;
     }
     .mapproduct{
         position: relative;
-        margin-top: 10%;
+        margin-top: 8%;
         left: 2%;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-wrap: wrap;
         overflow: visible;
-        grid-gap: 20px;
+        width: 98%;
     }
     .product{
-        width: auto;
+        width: 100px;
+        margin-right: 5.2%;
+        padding: 5% 8%;
     }
     .product .p-image{
-        width: 100px;
+        margin-left: -19%;
+        width: 100%;
+        margin-top: 34%;
+    }
+    .p-name{
+        font-size: 14px;
+    }
+  }
+  @media screen and (max-width: 400px){
+    .product{
+        width: 90px;
+        padding-right: 7%;
+    }
+    .product .p-image img{
+        width: 140%;
+    }
+    .p-weight{
+        margin-left: 5%;
     }
   }
