--- a/src/components/products/CurrentProduct.css
+++ b/src/components/products/CurrentProduct.css
@@ -77,6 +77,26 @@
     cursor: pointer;
     outline: none;
 }
+
+.p-inc,.p-dec {
+    padding: 4% 6%;
+    border-radius: 25px;
+    border: none;
+    border: 1px solid orange;
+    background: transparent;
+    transition: all 350ms ease-in-out;
+    cursor: pointer;
+    outline: none;
+}
+
+.p-inc:hover,.p-dec:hover{
+    background: orange;
+    color: #fff;
+}
+
+.p-dec{
+    padding: 4% 8%;
+}
 .p-cls{
     margin-top: 8%;
     background: #FFEB3B;
@@ -119,7 +139,9 @@
   }
   .quantity{
     width: 15%;
+    padding: 2% 6%;
     text-align: center;
+    margin:  0 8%;
   }
 
   /* Track */
