--- a/src/components/responsive/index.css
+++ b/src/components/responsive/index.css
@@ -13,7 +13,7 @@
     .main-nav .cart-prop{
         position: relative;
     }
-    .main-nav .cart-prop li:nth-child(4){
+    .cart-icon{
         position: absolute;
         margin-top: -3px;
         right: -25%;
