--- a/src/components/products/CurrentProduct.css
+++ b/src/components/products/CurrentProduct.css
@@ -175,6 +175,7 @@
     padding: 1% 3% 0 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     overflow: auto;
+    padding-left: 1%;
 }
 
 .mapproduct::-webkit-scrollbar {
